# bright-uploads

./: .gitignore  Cargo.toml  LICENSE  README.md
o2-thing-client/: Cargo.toml  build.rs  index.html  tailwind.config.cjs
o2-thing-client/public/styles/: input.css  output.css
o2-thing-client/src/: main.rs
o2-thing-server/: Cargo.toml  build.rs
o2-thing-server/src/: app_state.rs  endpoints.rs  o2_thing.rs  server.rs
upload-things/: Cargo.toml  README.md
upload-things/src/: lib.rs  presigned.rs  record.rs  region.rs  request.rs  route.rs  upload.rs
