[package]
name = "upload-things"
version = "0.1.0"
edition = "2021"
edition = "2021"
license = "MIT"
description = "Nostro2 is a simple toolset for interacting with the Nostr protocol."
repository = "https://github.com/illuminodes/bright-uploads.git"
readme = "README.md"
homepage = "https://github.com/illuminodes/bright-uploads"
documentation = "https://docs.rs/nostro2/latest/nostro2/"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"
sqids = "0.4.1"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4"] }
web-sys = { version = "0.3.76", features = ["Headers","FormData","Request", "RequestInit", "RequestMode", "Response","File"] }
